<resources>
    <string name="app_name">一手樓通知</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pg01">一手新盤</string>
    <string name="pg00">主頁</string>

    <string name="pg02Tb01">我的通知</string>
    <string name="pg02Tb02">全部通知</string>
    <string name="pg02Tb03">重大通知</string>
    <string name="pg02Tb04">我的訂閱</string>
    <string name="pg02Tb05">設定通知</string>
    <string name="pg03">樓盤詳情</string>
    <string name="pg04">中抽籤結果公報</string>
    <string name="pg60">計算工具</string>
    <string name="pref">設定</string>

    <string name="action_search">Search</string>

    <string name="action_settings">Settings</string>

    <!--Button-->
    <string name="subscribe_to_news">Subscibe</string>
    <string name="log_token">Log Token</string>

    <!--tmp-->
    <string name="quickstart_message">Test Subscription</string>

</resources>
