<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fcm.firsthandpptynoti.Pg03NewPropDtl">

    <TextView
        android:id="@+id/title_tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pg03"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_to_news"
        android:layout_below="@+id/title_tmp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp" />

    <Button
        android:id="@+id/logTokenButton"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:text="@string/log_token"
        android:layout_alignTop="@+id/subscribeButton"
        android:layout_toEndOf="@+id/subscribeButton"
        android:layout_marginStart="58dp" />
</RelativeLayout>